--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home"
@@ -7,6 +7,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginBottom="70dp"
+        android:text="Explore"
+        android:textColor="#000"
+        android:textSize="64sp"
+        android:textStyle="bold"
+        android:layout_above="@+id/et_multisearch"/>
+
+
+    <com.iammert.library.ui.multisearchviewlib.MultiSearchView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/et_multisearch"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        style="@style/SearchTextStyle"
+         />
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -23,6 +43,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:scrollbars="none"
+        android:layout_below="@+id/et_multisearch"
         tools:context=".listview.MainActivity" />
 
-</LinearLayout>
+</RelativeLayout>
