--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -32,7 +32,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/mainListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/design_default_color_background"
         android:clipChildren="false"
         android:clipToPadding="false"
