--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -49,6 +49,7 @@
     <Button
         android:id="@+id/profileButton"
         android:layout_width="70dp"
+        android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:text="User"
         android:textSize="10dp"
