--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -51,7 +51,7 @@
         android:layout_width="70dp"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
-        android:text="User"
+        android:text="Cart"
         android:textSize="10dp"
         android:layout_margin="10dp"
         />
