--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -24,4 +24,14 @@
         android:textSize="24sp"
         android:layout_margin="10dp"/>
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ic_delete"
+        android:src="@drawable/ic_delete"
+        android:background="@color/bgContent"
+        android:gravity="end"
+        android:textSize="24sp"
+        android:layout_margin="10dp"/>
+
 </LinearLayout>
