--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -54,6 +54,18 @@
         android:text="Cart"
         android:textSize="10dp"
         android:layout_margin="10dp"
+        android:layout_alignParentBottom="true"
         />
 
+    <Button
+        android:id="@+id/profile"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
+
+        android:text="Profile"
+        android:textSize="10dp"
+        android:layout_margin="10dp"
+        android:layout_toLeftOf="@+id/profileButton"
+        android:layout_alignParentBottom="true"
+        />
 </RelativeLayout>
